crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaAnomaly PamojaAnomaly;
typedef struct PamojaBmp280Calibration PamojaBmp280Calibration;
typedef struct PamojaMedian PamojaMedian;
typedef struct PamojaStepper PamojaStepper;
typedef struct PamojaTrend PamojaTrend;
typedef struct PamojaWindow PamojaWindow;
typedef struct {
  float celsius;
  uint32_t pascals;
  float hectopascals;
} PamojaBmp280Reading;
typedef struct {
  uint16_t dig_t1;
  int16_t dig_t2;
  int16_t dig_t3;
  uint16_t dig_p1;
  int16_t dig_p2;
  int16_t dig_p3;
  int16_t dig_p4;
  int16_t dig_p5;
  int16_t dig_p6;
  int16_t dig_p7;
  int16_t dig_p8;
  int16_t dig_p9;
} PamojaBmp280Coefficients;
typedef struct {
  uint32_t pressure;
  uint32_t temperature;
  uint8_t pressure_skipped;
  uint8_t temperature_skipped;
} PamojaBmp280Measurement;
typedef struct {
  uint8_t temperature;
  uint8_t pressure;
  uint8_t mode;
} PamojaBmp280CtrlMeas;
typedef struct {
  uint8_t standby;
  uint8_t filter;
  uint8_t spi_3wire;
} PamojaBmp280Config;
void pamoja_stepper_free(PamojaStepper *stepper);
int32_t pamoja_stepper_steps_for_degrees(float degrees, uint32_t steps_per_revolution);
PamojaWindow *pamoja_window_new(void);
void pamoja_window_push(PamojaWindow *window, float reading);
uintptr_t pamoja_window_len(const PamojaWindow *window);
uintptr_t pamoja_window_capacity(const PamojaWindow *window);
bool pamoja_window_mean(const PamojaWindow *window, float *out_value);
bool pamoja_window_min(const PamojaWindow *window, float *out_value);
bool pamoja_window_max(const PamojaWindow *window, float *out_value);
bool pamoja_window_range(const PamojaWindow *window, float *out_value);
bool pamoja_window_variance(const PamojaWindow *window, float *out_value);
void pamoja_window_free(PamojaWindow *window);
PamojaMedian *pamoja_median_new(void);
float pamoja_median_update(PamojaMedian *median, float reading);
bool pamoja_median_value(const PamojaMedian *median, float *out_value);
void pamoja_median_free(PamojaMedian *median);
PamojaTrend *pamoja_trend_new(void);
void pamoja_trend_push(PamojaTrend *trend, float reading);
bool pamoja_trend_slope(const PamojaTrend *trend, float *out_value);
void pamoja_trend_free(PamojaTrend *trend);
PamojaAnomaly *pamoja_anomaly_new(float sigmas);
bool pamoja_anomaly_check(PamojaAnomaly *anomaly, float reading);
void pamoja_anomaly_free(PamojaAnomaly *anomaly);
PamojaStatus pamoja_bmp280_calibration_new(const uint8_t *bytes,
                                           uintptr_t bytes_len,
                                           PamojaBmp280Calibration **out_calibration);
PamojaStatus pamoja_bmp280_compensate(const PamojaBmp280Calibration *calibration,
                                      const uint8_t *measurement,
                                      uintptr_t measurement_len,
                                      PamojaBmp280Reading *out_reading);
PamojaStatus pamoja_bmp280_calibration_to_bytes(const PamojaBmp280Calibration *calibration,
                                                uint8_t *out_bytes);
PamojaStatus pamoja_bmp280_calibration_coefficients(const PamojaBmp280Calibration *calibration,
                                                    PamojaBmp280Coefficients *out_coefficients);
void pamoja_bmp280_calibration_free(PamojaBmp280Calibration *calibration);
PamojaStatus pamoja_bmp280_parse_measurement(const uint8_t *data,
                                             uintptr_t data_len,
                                             PamojaBmp280Measurement *out_measurement);
PamojaStatus pamoja_bmp280_measurement_bytes(uint32_t pressure,
                                             uint32_t temperature,
                                             uint8_t *out_bytes);
bool pamoja_bmp280_measuring(uint8_t status);
bool pamoja_bmp280_image_updating(uint8_t status);
uint8_t pamoja_bmp280_ctrl_meas_bits(PamojaBmp280CtrlMeas config);
PamojaStatus pamoja_bmp280_ctrl_meas_from_bits(uint8_t bits, PamojaBmp280CtrlMeas *out_config);
uint8_t pamoja_bmp280_config_bits(PamojaBmp280Config config);
PamojaStatus pamoja_bmp280_config_from_bits(uint8_t bits, PamojaBmp280Config *out_config);
uint8_t pamoja_bmp280_oversampling_factor(uint8_t code);
uint32_t pamoja_bmp280_standby_micros(uint8_t code);
uint8_t pamoja_sht3x_crc(const uint8_t *data, uintptr_t data_len);