bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Sensing.cs


    /// <summary>Releases a stepper handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_stepper_free(IntPtr stepper);

    /// <summary>Returns how many steps a rotation of an angle takes.</summary>
    [LibraryImport(Library)]
    public static partial int pamoja_stepper_steps_for_degrees(
        float degrees,
        uint stepsPerRevolution);

    /// <summary>Creates an empty rolling window.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_window_new();

    /// <summary>Adds a reading to a window, dropping the oldest once full.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_window_push(IntPtr window, float reading);

    /// <summary>Returns how many readings a window holds.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_window_len(IntPtr window);

    /// <summary>Returns how many readings a window holds before dropping.</summary>
    [LibraryImport(Library)]
    public static partial nuint pamoja_window_capacity(IntPtr window);

    /// <summary>Reads the mean of a window's readings, if it has any.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_window_mean(IntPtr window, out float outValue);

    /// <summary>Reads the smallest reading in a window, if it has any.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_window_min(IntPtr window, out float outValue);

    /// <summary>Reads the largest reading in a window, if it has any.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_window_max(IntPtr window, out float outValue);

    /// <summary>Reads the spread across a window's readings, if it has any.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_window_range(IntPtr window, out float outValue);

    /// <summary>Reads the variance of a window's readings, if it has enough.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_window_variance(IntPtr window, out float outValue);

    /// <summary>Releases a rolling window handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_window_free(IntPtr window);

    /// <summary>Creates an empty median filter.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_median_new();

    /// <summary>Folds a reading in and returns the median of the window.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_median_update(IntPtr median, float reading);

    /// <summary>Reads the current median, if the filter has a reading.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_median_value(IntPtr median, out float outValue);

    /// <summary>Releases a median filter handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_median_free(IntPtr median);

    /// <summary>Creates an empty trend estimator.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_trend_new();

    /// <summary>Adds a reading to a trend estimator.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_trend_push(IntPtr trend, float reading);

    /// <summary>Reads the slope a trend estimator has fitted, if it has enough readings.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_trend_slope(IntPtr trend, out float outValue);

    /// <summary>Releases a trend estimator handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_trend_free(IntPtr trend);

    /// <summary>Creates an anomaly detector at a deviation threshold.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_anomaly_new(float sigmas);

    /// <summary>Folds a reading in and reports whether it stands out.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_anomaly_check(IntPtr anomaly, float reading);

    /// <summary>Releases an anomaly detector handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_anomaly_free(IntPtr anomaly);

    /// <summary>
    /// Builds a BMP280 calibration from the 24 bytes read out of its registers. # Returns
    /// [PamojaStatus::Ok] on success, with *out_calibration set to a new handle the caller
    /// must release with [pamoja_bmp280_calibration_free], or
    /// [PamojaStatus::InvalidArgument] if the buffer is not 24 bytes. # Safety bytes must
    /// point to at least bytes_len readable bytes, and out_calibration must point to a
    /// writable *mut PamojaBmp280Calibration.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_calibration_new(
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out IntPtr outCalibration);

    /// <summary>
    /// Turns a BMP280 burst read into a compensated reading. # Returns [PamojaStatus::Ok]
    /// on success, with *out_reading filled in, or [PamojaStatus::InvalidArgument] if the
    /// calibration is null or the measurement is not six bytes. # Safety calibration must
    /// be a live handle from [pamoja_bmp280_calibration_new], measurement must point to at
    /// least measurement_len readable bytes, and out_reading must point to a writable
    /// PamojaBmp280Reading.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_compensate(
        IntPtr calibration,
        ReadOnlySpan<byte> measurement,
        nuint measurementLen,
        out PamojaBmp280Reading outReading);

    /// <summary>
    /// Rebuilds the 24 calibration bytes a device holding these coefficients returns. #
    /// Returns [PamojaStatus::Ok] on success, with the 24 bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if either pointer is null. # Safety calibration must
    /// be a live handle from [pamoja_bmp280_calibration_new], and out_bytes must point to
    /// at least 24 writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_calibration_to_bytes(
        IntPtr calibration,
        Span<byte> outBytes);

    /// <summary>
    /// Reads out the trimming coefficients a BMP280 calibration carries. # Returns
    /// [PamojaStatus::Ok] on success, with *out_coefficients filled in, or
    /// [PamojaStatus::InvalidArgument] if either pointer is null. # Safety calibration must
    /// be a live handle from [pamoja_bmp280_calibration_new], and out_coefficients must
    /// point to a writable PamojaBmp280Coefficients.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_calibration_coefficients(
        IntPtr calibration,
        out PamojaBmp280Coefficients outCoefficients);

    /// <summary>
    /// Releases a BMP280 calibration handle. Passing null is a no-op. # Safety calibration
    /// must be a handle from [pamoja_bmp280_calibration_new] that has not already been
    /// freed, or null. After this call it must not be used again.
    /// </summary>
    [LibraryImport(Library)]
    public static partial void pamoja_bmp280_calibration_free(IntPtr calibration);

    /// <summary>
    /// Unpacks the six data bytes a BMP280 burst read returns. # Returns [PamojaStatus::Ok]
    /// on success, with *out_measurement filled in, or [PamojaStatus::InvalidArgument] if
    /// the buffer is not six bytes. # Safety data must point to at least data_len readable
    /// bytes, and out_measurement must point to a writable PamojaBmp280Measurement.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_parse_measurement(
        ReadOnlySpan<byte> data,
        nuint dataLen,
        out PamojaBmp280Measurement outMeasurement);

    /// <summary>
    /// Builds the six data bytes a BMP280 holding these codes would return. # Returns
    /// [PamojaStatus::Ok] on success, with the six bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least six writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_measurement_bytes(
        uint pressure,
        uint temperature,
        Span<byte> outBytes);

    /// <summary>
    /// Reports whether a BMP280 status byte says a conversion is running. # Returns true
    /// while the part is measuring.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_bmp280_measuring(byte status);

    /// <summary>
    /// Reports whether a BMP280 status byte says the calibration image is loading. #
    /// Returns true while the coefficients are being copied out of non-volatile memory.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_bmp280_image_updating(byte status);

    /// <summary>Assembles a BMP280 ctrl_meas register value. # Returns The register value to write.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_bmp280_ctrl_meas_bits(PamojaBmp280CtrlMeas config);

    /// <summary>
    /// Parses a BMP280 ctrl_meas register value. # Returns [PamojaStatus::Ok], with
    /// *out_config filled in. Every register value decodes, so this fails only on a null
    /// pointer. # Safety out_config must point to a writable PamojaBmp280CtrlMeas.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_ctrl_meas_from_bits(
        byte bits,
        out PamojaBmp280CtrlMeas outConfig);

    /// <summary>Assembles a BMP280 config register value. # Returns The register value to write.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_bmp280_config_bits(PamojaBmp280Config config);

    /// <summary>
    /// Parses a BMP280 config register value. # Returns [PamojaStatus::Ok], with
    /// *out_config filled in. Every register value decodes, so this fails only on a null
    /// pointer. # Safety out_config must point to a writable PamojaBmp280Config.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_config_from_bits(
        byte bits,
        out PamojaBmp280Config outConfig);

    /// <summary>
    /// Returns how many samples a BMP280 oversampling code averages. # Returns The
    /// oversampling factor, 1 to 16.
    /// </summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_bmp280_oversampling_factor(byte code);

    /// <summary>
    /// Returns the normal-mode standby period a BMP280 code selects. # Returns The period
    /// in microseconds.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_bmp280_standby_micros(byte code);

    /// <summary>
    /// Computes the CRC-8 an SHT3x appends to every data word. # Returns The checksum over
    /// data, or 0 if the pointer is null with a non-zero length. # Safety data must point
    /// to at least data_len readable bytes, or be null when data_len is 0.
    /// </summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_sht3x_crc(
        ReadOnlySpan<byte> data,
        nuint dataLen);
